Config Import.razor, import using BlindBoxShop.Service.Contract

--- a/BlindBoxShop.Application/Components/_Imports.razor
+++ b/BlindBoxShop.Application/Components/_Imports.razor
@@ -9,3 +9,5 @@
 @using Microsoft.JSInterop
 @using BlindBoxShop.Application
 @using BlindBoxShop.Application.Components
+@using BlindBoxShop.Service.Contract
+@using BlindBoxShop.Shared
