--- a/BlindBoxShop.Application/_Imports.razor
+++ b/BlindBoxShop.Application/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using Microsoft.AspNetCore.Html
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -9,5 +10,7 @@
 @using Microsoft.JSInterop
 @using BlindBoxShop.Application
 @using BlindBoxShop.Application.Components
+@using BlindBoxShop.Application.Components.Layout
+@using BlindBoxShop.Application.Pages
 @using BlindBoxShop.Service.Contract
 @using BlindBoxShop.Shared
