--- a/BlindBoxShop.Application/_Imports.razor
+++ b/BlindBoxShop.Application/_Imports.razor
@@ -14,3 +14,7 @@
 @using BlindBoxShop.Application.Pages
 @using BlindBoxShop.Service.Contract
 @using BlindBoxShop.Shared
+@using BootstrapBlazor.Components
+@using Blazored.Toast
+@using Blazored.Toast.Services
+@using Blazored.Toast.Configuration
