--- a/BlindBoxShop.Application/Components/Layout/EmployeeLayout.razor
+++ b/BlindBoxShop.Application/Components/Layout/EmployeeLayout.razor
@@ -13,9 +13,15 @@
         <article class="content px-4">
             @Body
         </article>
+
+        <BlazoredToasts Position="ToastPosition.TopRight"
+                        Timeout="10"
+                        IconType="IconType.FontAwesome"
+                        SuccessIcon="oi oi-thumb-up"
+                        ErrorIcon="oi oi-bug"
+                        @rendermode="InteractiveServer" />
     </main>
 </div>
-
 <div id="blazor-error-ui">
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
