--- a/BlindBoxShop.Application/Pages/Routes.razor
+++ b/BlindBoxShop.Application/Pages/Routes.razor
@@ -1,11 +1,17 @@
 ﻿@using BlindBoxShop.Application.Pages.Account.Shared
-<Router AppAssembly="typeof(Program).Assembly">
-    <Found Context="routeData">
-        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(EmployeeLayout)">
-            <NotAuthorized>
-                <RedirectToLogin />
-            </NotAuthorized>
-        </AuthorizeRouteView>
-        <FocusOnNavigate RouteData="routeData" Selector="h1" />
-    </Found>
-</Router>
+
+<BootstrapBlazorRoot>
+    <Router AppAssembly="typeof(Program).Assembly">
+        <Found Context="routeData">
+            <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(EmployeeLayout)">
+                <NotAuthorized>
+                    <RedirectToLogin />
+                </NotAuthorized>
+            </AuthorizeRouteView>
+            <FocusOnNavigate RouteData="routeData" Selector="h1" />
+        </Found>
+        <NotFound>
+            <NotFoundPage></NotFoundPage>
+        </NotFound>
+    </Router>
+</BootstrapBlazorRoot>
