feat: CRUD for Vouchers

--- a/BlindBoxShop.Application/Pages/Employee/BlindBoxCategoryPage/Partials/BlindBoxCategoryModalCreate.razor
+++ b/BlindBoxShop.Application/Pages/Employee/BlindBoxCategoryPage/Partials/BlindBoxCategoryModalCreate.razor
@@ -1,5 +1,4 @@
-﻿
-<Button OnClick="() => DragModal.Toggle()">Create blind box category</Button>
+﻿<Button OnClick="() => DragModal.Toggle()">Create blind box category</Button>
 <Modal @ref="DragModal">
     <ModalDialog Title="Blind Box Category" IsDraggable="true" ShowMaximizeButton="true">
         <BodyTemplate>
