--- a/BlindBoxShop.Application/Components/Layout/EmployeeNavMenu.razor
+++ b/BlindBoxShop.Application/Components/Layout/EmployeeNavMenu.razor
@@ -29,6 +29,11 @@
                 <span class="bi bi-lock-nav-menu" aria-hidden="true"></span>Categories
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="emp/vouchers">
+                <span class="bi bi-lock-nav-menu" aria-hidden="true"></span>Vouchers
+            </NavLink>
+        </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
