--- a/BlindBoxShop.Application/Pages/Account/Shared/AccountLayout.razor
+++ b/BlindBoxShop.Application/Pages/Account/Shared/AccountLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-@layout BlindBoxShop.Application.Components.Layout.EmployeeLayout
+@layout BlindBoxShop.Application.Components.Layout.MainLayout
 @inject NavigationManager NavigationManager
 
 @if (HttpContext is null)
