--- a/BlindBoxShop.Application/Pages/Pages/Counter.razor
+++ b/BlindBoxShop.Application/Pages/Pages/Counter.razor
@@ -1,20 +1,4 @@
-﻿@page "/counter"
+﻿@using BlindBoxShop.Shared.DataTransferObject.BlindBoxCategory
+
+@page "/counter"
 @rendermode InteractiveServer
-<PageTitle>Counter</PageTitle>
-
-<h1>Counter</h1>
-
-<p role="status">Current count: @currentCount </p>
-
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
-
-@code {
-    private int currentCount = 0;
-
-    private void IncrementCount()
-    {
-        currentCount++;
-    }
-
-
-}
