--- a/BlindBoxShop.Application/Pages/Routes.razor
+++ b/BlindBoxShop.Application/Pages/Routes.razor
@@ -1,17 +1,15 @@
 ﻿@using BlindBoxShop.Application.Pages.Account.Shared
 
-<BootstrapBlazorRoot>
-    <Router AppAssembly="typeof(Program).Assembly">
-        <Found Context="routeData">
-            <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(EmployeeLayout)">
-                <NotAuthorized>
-                    <RedirectToLogin />
-                </NotAuthorized>
-            </AuthorizeRouteView>
-            <FocusOnNavigate RouteData="routeData" Selector="h1" />
-        </Found>
-        <NotFound>
-            <NotFoundPage></NotFoundPage>
-        </NotFound>
-    </Router>
-</BootstrapBlazorRoot>
+<Router AppAssembly="typeof(Program).Assembly">
+    <Found Context="routeData">
+        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)">
+            <NotAuthorized>
+                <RedirectToLogin />
+            </NotAuthorized>
+        </AuthorizeRouteView>
+        <FocusOnNavigate RouteData="routeData" Selector="h1" />
+    </Found>
+    <NotFound>
+        <NotFoundPage></NotFoundPage>
+    </NotFound>
+</Router>
