--- a/BlindBoxShop.Application/App.razor
+++ b/BlindBoxShop.Application/App.razor
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="BlindBoxShop.Application.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" rel="stylesheet">
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <HeadOutlet />
 </head>
