Fix layout for voucher

--- a/BlindBoxShop.Application/Components/Layout/NavMenu.razor
+++ b/BlindBoxShop.Application/Components/Layout/NavMenu.razor
@@ -15,6 +15,9 @@
     <MudNavLink Href="/category" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Category">
         Category
     </MudNavLink>
+    <MudNavLink Href="/voucher" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Discount">
+        Voucher
+    </MudNavLink>
     <MudNavLink Href="/weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.People">
         Staffs
     </MudNavLink>
