--- a/BlindBoxShop.Application/Pages/Employee/VoucherPage/Voucher.razor
+++ b/BlindBoxShop.Application/Pages/Employee/VoucherPage/Voucher.razor
@@ -1,29 +1,13 @@
-﻿@page "/emp/vouchers"
+﻿@page "/voucher"
 @attribute [StreamRendering]
 @rendermode InteractiveServer
 @using BlindBoxShop.Application.Pages.Employee.VoucherPage.Partials
 
-<PageTitle>Vouchers</PageTitle>
-<div class="row">
-    <div class="col-md-5 mb-3">
-        <SearchBar OnSearchChanged="SearchChanged" />
-        <PageSizeDropDown SelectedPageSize="SetPageSize" />
-    </div>
-    <div class="col-md-5 mb-3">
-        <SortBar OnSortChanged="SortChanged" />
-    </div>
-    <div class="col-md-2 mb-3">
-        <VoucherModalCreate />
-    </div>
-</div>
-<div class="row">
-    <div class="col mb-3">
-        <VoucherTable Vouchers="@Vouchers">
-        </VoucherTable>
-    </div>
-</div>
-<div class="row">
-    <div class="col mb-3">
-        <Paginations MetaData="MetaData" Spread="1" SelectedPage="SelectedPage" />
-    </div>
-</div>
+<PageTitle>Voucher</PageTitle>
+<MudContainer Class="mt-16 px-8 min-vh-100" MaxWidth="MaxWidth.ExtraExtraLarge">
+    <MudStack>
+        <MudPaper Class="pa-3">
+            <VoucherTable />
+        </MudPaper>
+    </MudStack>
+</MudContainer>
