--- a/BlindBoxShop.Application/App.razor
+++ b/BlindBoxShop.Application/App.razor
@@ -6,7 +6,7 @@
     <base href="/" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     @* <link rel="stylesheet" href="bootstrap/bootstrap.min.css" /> *@
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="~/app.css" />
     <link rel="stylesheet" href="BlindBoxShop.Application.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" rel="stylesheet">
