--- a/BlindBoxShop.Application/Components/Layout/NavMenu.razor
+++ b/BlindBoxShop.Application/Components/Layout/NavMenu.razor
@@ -15,8 +15,11 @@
     <MudNavLink Href="/category" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Category">
         Category
     </MudNavLink>
-    <MudNavLink Href="/voucher" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Discount">
+    <MudNavLink Href="/voucher" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.CardGiftcard">
         Voucher
+    </MudNavLink>
+    <MudNavLink Href="/review" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Reviews">
+        Review
     </MudNavLink>
     <MudNavLink Href="/weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.People">
         Staffs
