feat: CRUD for Reply

--- a/BlindBoxShop.Application/Components/Layout/NavMenu.razor
+++ b/BlindBoxShop.Application/Components/Layout/NavMenu.razor
@@ -21,6 +21,9 @@
     <MudNavLink Href="/review" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Reviews">
         Review
     </MudNavLink>
+    <MudNavLink Href="/reply" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Reply">
+        Reply
+    </MudNavLink>
     <MudNavLink Href="/weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.People">
         Staffs
     </MudNavLink>
