feat: CRUD for Order

--- a/BlindBoxShop.Application/Components/Layout/NavMenu.razor
+++ b/BlindBoxShop.Application/Components/Layout/NavMenu.razor
@@ -24,6 +24,9 @@
     <MudNavLink Href="/reply" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Reply">
         Reply
     </MudNavLink>
+    <MudNavLink Href="/order" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Inventory">
+        Order
+    </MudNavLink>
     <MudNavLink Href="/weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.People">
         Staffs
     </MudNavLink>
