--- a/BlindBoxShop.Application/Pages/Employee/ReviewPage/Partials/ReviewTable.razor
+++ b/BlindBoxShop.Application/Pages/Employee/ReviewPage/Partials/ReviewTable.razor
@@ -12,16 +12,9 @@
           IsEditRowSwitchingBlocked="false"
           AllowUnsorted="false"
           ApplyButtonPosition="TableApplyButtonPosition.End" EditButtonPosition="TableEditButtonPosition.End" EditTrigger="TableEditTrigger.RowClick">
+
     <ToolBarContent>
         <MudFab StartIcon="@Icons.Material.Filled.Add" DropShadow="true" Size="Size.Small" Label="Add Review" @onclick="OpenCreateDialogAsync" Class="mr-3" />
-        <MudFab StartIcon="@Icons.Material.Filled.Remove"
-                DropShadow="true"
-                Size="Size.Small"
-                Color="Color.Error"
-                Label="Remove Review"
-                @onclick="@(() => OpenRemoveDialogAsync(_reviewDto?.Id ?? Guid.Empty))"
-                Disabled="_disableRemoveBtn" />
-        <MudSpacer />
         <MudTextField T="string"
                       @bind-value="@searchString"
                       Placeholder="Search reviews"
@@ -32,33 +25,44 @@
                       Class="mt-0">
         </MudTextField>
     </ToolBarContent>
+
     <ColGroup>
         <col style="width:20%;" />
         <col style="width:15%;" />
         <col style="width:10%;" />
         <col style="width:10%;" />
         <col style="width:45%;" />
+        <col style="width:10%;" /> <!-- For the Delete button -->
     </ColGroup>
+
     <HeaderContent>
         <MudTh><MudTableSortLabel SortLabel="Username" T="ReviewDto">Username</MudTableSortLabel></MudTh>
         <MudTh><MudTableSortLabel SortLabel="BlindBoxName" T="ReviewDto">Blind Box</MudTableSortLabel></MudTh>
         <MudTh><MudTableSortLabel SortLabel="CreatedAt" T="ReviewDto">Created At</MudTableSortLabel></MudTh>
         <MudTh><MudTableSortLabel SortLabel="RatingStar" T="ReviewDto">Rating</MudTableSortLabel></MudTh>
         <MudTh>Feedback</MudTh>
+        <MudTh>Actions</MudTh>
     </HeaderContent>
+
     <RowTemplate>
         <MudTd DataLabel="Username">@context.Username</MudTd>
         <MudTd DataLabel="Blind Box">@context.BlindBoxName</MudTd>
         <MudTd DataLabel="Created At">@context.CreatedAt.ToString("yyyy-MM-dd HH:mm:ss")</MudTd>
         <MudTd DataLabel="Rating">@context.RatingStar</MudTd>
         <MudTd DataLabel="Feedback">@context.FeedBack</MudTd>
+        <MudTd DataLabel="Actions">
+            <MudIconButton Icon="@Icons.Material.Filled.Delete" Color="Color.Error" @onclick="() => OpenRemoveDialogAsync(context.Id)" />
+        </MudTd>
     </RowTemplate>
+
     <NoRecordsContent>
         <MudText>No reviews found</MudText>
     </NoRecordsContent>
+
     <LoadingContent>
         <MudProgressCircular Color="Color.Primary" Indeterminate />
     </LoadingContent>
+
     <RowEditingTemplate>
         <MudTd DataLabel="Username">@context.Username</MudTd>
         <MudTd DataLabel="Blind Box">@context.BlindBoxName</MudTd>
@@ -70,6 +74,7 @@
             <MudTextField T="string" @bind-Value="context.FeedBack" Immediate="true" />
         </MudTd>
     </RowEditingTemplate>
+
     <PagerContent>
         <MudTablePager PageSizeOptions="new int[] { 5, 10, 20 }" />
     </PagerContent>
