feat: finish order detail and review with reply

--- a/BlindBoxShop.Application/Components/Layout/NavMenu.razor
+++ b/BlindBoxShop.Application/Components/Layout/NavMenu.razor
@@ -18,11 +18,11 @@
     <MudNavLink Href="/voucher" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.CardGiftcard">
         Voucher
     </MudNavLink>
-    <MudNavLink Href="/review" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Reviews">
-        Review
+    <MudNavLink Href="/myreviews" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Reviews">
+        My Reviews
     </MudNavLink>
-    <MudNavLink Href="/reply" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Reply">
-        Reply
+    <MudNavLink Href="/review" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Reply">
+        Review
     </MudNavLink>
     <MudNavLink Href="/order" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Inventory">
         Order
