--- a/BlindBoxShop.Application/Pages/Employee/MyReviewPage/MyReview.razor
+++ b/BlindBoxShop.Application/Pages/Employee/MyReviewPage/MyReview.razor
@@ -1,13 +1,13 @@
-﻿@page "/reply"
+﻿@page "/myreviews"
 @attribute [StreamRendering]
 @rendermode InteractiveServer
-@using BlindBoxShop.Application.Pages.Employee.ReplyPage.Partials
+@using BlindBoxShop.Application.Pages.Employee.MyReviewPage.Partials
 
-<PageTitle>Reply</PageTitle>
+<PageTitle>Review</PageTitle>
 <MudContainer Class="mt-16 px-8 min-vh-100" MaxWidth="MaxWidth.ExtraExtraLarge">
     <MudStack>
         <MudPaper Class="pa-3">
-            <ReplyTable />
+            <MyReviewTable />
         </MudPaper>
     </MudStack>
 </MudContainer>
