--- a/BlindBoxShop.Application/Pages/Employee/MyReviewPage/Partials/ReviewModalCreate.razor
+++ b/BlindBoxShop.Application/Pages/Employee/MyReviewPage/Partials/ReviewModalCreate.razor
@@ -1,5 +1,5 @@
 ﻿@using System.ComponentModel.DataAnnotations
-@using BlindBoxShop.Shared.DataTransferObject.CustomerReview
+@using BlindBoxShop.Shared.DataTransferObject.Review
 @inject ISnackbar Snackbar
 
 <EditForm Model="@_reviewForCreate" OnValidSubmit="ValidSubmit" OnInvalidSubmit="InvalidSubmit">
